# webdev-final-project

./: .gitignore  docker-compose.yml  index.html
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: auth.py  recipes.py  user.py
backend/app/core/: config.py  db.py  security.py
docs/: README.md  er-diagram.md  uml-diagram.md
frontend/: .gitignore  Dockerfile  biome.json  index.html  package.json  pnpm-lock.yaml  redocly.yaml
frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx
frontend/src/Account/: Login.tsx  Profile.tsx  Settings.tsx  Signup.tsx  UserManagement.tsx  index.tsx
frontend/src/Home/: NavBar.tsx  index.tsx
frontend/src/Recipe/: RecipeDetail.tsx  RecipeEditor.tsx  RecipeSearchResult.tsx
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: AddToListModal.tsx  Recipe.tsx
frontend/src/hooks/: useAuth.ts  useLikeMutation.ts
